--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
   </head>
+  <header>
+    <h1>Science Work</h1>
+    <a href="vampireswillneverhurtyou.nekoweb.org">old work here</a>
+    <a href="pages/2point1.html">2.1, Scientific Methods</a>
+  </header>
 </html>
