--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <header>
     <h1>Science Work</h1>
   </header>
-  <a href="vampireswillneverhurtyou.nekoweb.org">old work here</a>
+  <a href="https://vampireswillneverhurtyou.nekoweb.org/pages/school/formyteachers.html">old work here</a>
   <a href="pages/2point1.html">2.1, Scientific Methods</a>
 </html>
