--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <title>Key Terms 2.1</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <h1>Key Terms 2.1</h1>
+    </header>
+  </body>
+</html>
