--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -7,5 +7,17 @@
     <header>
       <h1>Key Terms 2.1</h1>
     </header>
+    <div>
+      <ol>
+        <li>observation</li>
+        <li>hypothesis</li>
+        <li>prediction</li>
+        <li>variable</li>
+        <li>experimental group</li>
+        <li>control group</li>
+        <li>data</li>
+        <li>correlation</li>
+      </ol>
+    </div>
   </body>
 </html>
