--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <header>
-      <h1>Key Terms 2.1</h1>
+      <h1>Key Terms</h1>
+      <h2>Environmental Science 2.1</h2>
     </header>
     <div>
       <ol>
