--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -10,9 +10,10 @@
     </header>
     <div>
       <ol>
-        <li>observation</li>
-        <li>hypothesis</li>
-        <li>prediction</li>
+        <li>observation - the process of obtaining information by using the senses; the information obtained by using the senses.</li>
+        <li>hypothesis - a testable idea or explanation that leads to scientific investigation.</li>
+        <li>prediction - a statement made in advance that expresses the results that will be obtained from testing a hypothesis if
+          the hypothesis is supported; the expected outcome if a hypothesis is accurate.</li>
         <li>variable</li>
         <li>experimental group</li>
         <li>control group</li>
