--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -14,12 +14,14 @@
         <li>observation - the process of obtaining information by using the senses; the information obtained by using the senses.</li>
         <li>hypothesis - a testable idea or explanation that leads to scientific investigation.</li>
         <li>prediction - a statement made in advance that expresses the results that will be obtained from testing a hypothesis if
-          the hypothesis is supported; the expected outcome if a hypothesis is accurate.</li>
-        <li>variable</li>
-        <li>experimental group</li>
-        <li>control group</li>
-        <li>data</li>
-        <li>correlation</li>
+        the hypothesis is supported; the expected outcome if a hypothesis is accurate.</li>
+        <li>variable - a factor that changes in an experiment in order to test a hypothesis.</li>
+        <li>experimental group - in an experiment, a group that is identical to a control group except for one factor and that is
+        compared with the control group.</li>
+        <li>control group - in an experiment, a group that serves as a standard of comparison with another group to which the control
+        group is identical except for one factor.</li>
+        <li>data - any pieces of information acquired through an observation or experiment.</li>
+        <li>correlation - the liner</li>
       </ol>
     </div>
   </body>
