--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Key Terms 2.1</title>
+    <title>Environmental Science 2.1</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>Key Terms</h1>
-      <h2>Environmental Science 2.1</h2>
+      <h1>Environmental Science 2.1</h1>
     </header>
     <div>
+      <h2>Key Terms</h2>
       <ol>
         <li>observation - the process of obtaining information by using the senses; the information obtained by using the senses.</li>
         <li>hypothesis - a testable idea or explanation that leads to scientific investigation.</li>
         <li>prediction - a statement made in advance that expresses the results that will be obtained from testing a hypothesis if
         the hypothesis is supported; the expected outcome if a hypothesis is accurate.</li>
-        <li>variable - a factor that changes in an experiment in order to test a hypothesis.</li>
+        <li>variable - a factor that changes in an experiment in o   rder to test a hypothesis.</li>
         <li>experimental group - in an experiment, a group that is identical to a control group except for one factor and that is
         compared with the control group.</li>
         <li>control group - in an experiment, a group that serves as a standard of comparison with another group to which the control
         group is identical except for one factor.</li>
         <li>data - any pieces of information acquired through an observation or experiment.</li>
-        <li>correlation - the liner</li>
+        <li>correlation - the linear dependence between two variables.</li>
       </ol>
+    </div>
+
+    <div>
+      
     </div>
   </body>
 </html>
