--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -26,7 +26,12 @@
     </div>
 
     <div>
-      
+      <h2>Reading Checks</h2>
+      <ol>
+        <li>What is the difference between a hypothesis and a prediction?</li>
+        <p>A hypothesis is a testable idea or explanation that leads to a scientific investigation.</p>
+        <p>A prediction is a logical statement about what will happen if the hypothesis is correct.</p>
+      </ol>
     </div>
   </body>
 </html>
