--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -29,8 +29,11 @@
       <h2>Reading Checks</h2>
       <ol>
         <li>What is the difference between a hypothesis and a prediction?</li>
-        <p>A hypothesis is a testable idea or explanation that leads to a scientific investigation.</p>
-        <p>A prediction is a logical statement about what will happen if the hypothesis is correct.</p>
+        <p>A hypothesis is a testable idea or explanation that leads to a scientific investigation, and
+          a prediction is a logical statement about what will happen if the hypothesis is correct.</p>
+        <li>How did drawing a map of London help John Snow solve the cholera problem in 1854?</li>
+        <p>He marked polluted water sources and the homes of whoever died from cholera. Doing this helped
+        find out which water pump was the cause of so many deaths, and shut it off.</p>
       </ol>
     </div>
   </body>
