--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -36,5 +36,13 @@
         find out which water pump was the cause of so many deaths, and shut it off.</p>
       </ol>
     </div>
+    <div>
+      <h2>Case Study</h2>
+      <ol>
+        <li>Why did the students ensure that the conditions in both aquariums were identical?</li>
+        <p>The students ensured the conditions were identical so there would be no mistakes in the process</p>
+        <li>How would you change the hypothesis if mussels died in both aquariums?</li>
+      </ol>
+    </div>
   </body>
 </html>
