--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -40,7 +40,9 @@
       <h2>Case Study</h2>
       <ol>
         <li>Why did the students ensure that the conditions in both aquariums were identical?</li>
-        <p>The students ensured the conditions were identical so there would be no mistakes in the process</p>
+        <p>The students ensured the conditions were identical so there would be no mistakes in the
+          process, such as the tempature in the tank being too low, killing them in the process.
+        </p>
         <li>How would you change the hypothesis if mussels died in both aquariums?</li>
       </ol>
     </div>
