--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -33,7 +33,7 @@
           a prediction is a logical statement about what will happen if the hypothesis is correct.</p>
         <li>How did drawing a map of London help John Snow solve the cholera problem in 1854?</li>
         <p>He marked polluted water sources and the homes of whoever died from cholera. Doing this helped
-        find out which water pump was the cause of so many deaths, and shut it off.</p>
+        pinpoint which water pump was mainly polluted and the caused many deaths, and shut it off.</p>
       </ol>
     </div>
     <div>
