--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -33,7 +33,8 @@
           a prediction is a logical statement about what will happen if the hypothesis is correct.</p>
         <li>How did drawing a map of London help John Snow solve the cholera problem in 1854?</li>
         <p>He marked polluted water sources and the homes of whoever died from cholera. Doing this helped
-        pinpoint which water pump was mainly polluted and the caused many deaths, and shut it off.</p>
+        pinpoint which water pump was mainly polluted and caused many deaths, and shut it off, clearing the
+        other water sources.</p>
       </ol>
     </div>
     <div>
@@ -44,6 +45,9 @@
           process, such as the tempature in the tank being too low, killing them in the process.
         </p>
         <li>How would you change the hypothesis if mussels died in both aquariums?</li>
+        <p>I would change the hypothesis saying that it was never phosphorus that killed
+        them, instead changing it to issues with the water tempature. Perhaps due to warming,
+        the water became too hot!</p>
       </ol>
     </div>
   </body>
