--- a/pages/2point1.html
+++ b/pages/2point1.html
@@ -50,5 +50,19 @@
         the water became too hot!</p>
       </ol>
     </div>
+    <header>
+      <h1>Review</h1>
+    </header>
+    <div>
+      <ol>
+        <li>Describe the steps of the experimetal method.</li>
+        <p>1. Observing - Using the senses to observe something and ask questions.</p>
+        <li>Name three scientific habits of mind and explain their importance.</li>
+        <li>Explain why a hypothesis is not just a guess.</li>
+        <li>Explain how scientists try to answer question that cannot be tested with experiments.</li>
+        <li>Read the description of experiments. Describe the two essential parts of a good experiment,
+        and explain their importance.</li>
+      </ol>
+    </div>
   </body>
 </html>
